[package]
name = "electronics_tui_tester"
version = "0.1.0"
edition = "2021"
authors = ["Stormy Wentworth"]
description = "A TUI-based electronics testing suite for recycling and refurbishing systems"
license = "MIT"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
which = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tokio = { version = "1.36", features = ["full"] }
once_cell = "1.21.3"
rodio = "0.20.1"
